--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.3"
 	},
+	"exports": {
+		".": "./SideMenu.svelte"
+	},
 	"name": "@leveluptuts/svelte-side-menu",
 	"scripts": {
 		"build": "svelte-kit build",
@@ -26,5 +29,5 @@
 		"preview": "svelte-kit preview"
 	},
 	"type": "module",
-	"version": "0.0.1"
+	"version": "0.0.4"
 }
