--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"author": "Scott Tolinski",
 	"devDependencies": {
 		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
