--- a/package/package.json
+++ b/package/package.json
@@ -16,13 +16,13 @@
     "typescript": "^4.7.4",
     "vite": "3.0.2"
   },
-  "exports": {
-    "./package.json": "./package.json",
-    ".": "./SideMenu.svelte",
-    "./SideMenu.svelte": "./SideMenu.svelte"
-  },
   "name": "@leveluptuts/svelte-side-menu",
   "type": "module",
-  "version": "0.0.4",
-  "svelte": "./SideMenu.svelte"
+  "version": "1.0.0",
+  "exports": {
+    "./package.json": "./package.json",
+    "./SideMenu.svelte": "./SideMenu.svelte",
+    ".": "./index.js"
+  },
+  "svelte": "./index.js"
 }
