--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"author": "Scott Tolinski",
+	"author": "Scott Tolinski | Level Up Tutorials",
 	"devDependencies": {
 		"@sveltejs/kit": "1.0.0-next.390",
 		"@typescript-eslint/eslint-plugin": "^5.30.7",
