--- a/package/package.json
+++ b/package/package.json
@@ -17,13 +17,13 @@
     "typescript": "^5.1.3",
     "vite": "4.3.9"
   },
-  "name": "@leveluptuts/svelte-side-menu",
-  "type": "module",
-  "version": "1.0.5",
   "exports": {
-    "./package.json": "./package.json",
+    ".": "./index.js",
     "./SideMenu.svelte": "./SideMenu.svelte",
-    ".": "./index.js"
+    "./package.json": "./package.json"
   },
-  "svelte": "./index.js"
+  "name": "@leveluptuts/svelte-side-menu",
+  "svelte": "./index.js",
+  "type": "module",
+  "version": "1.0.6"
 }
